--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="centered">
-            <button id = "takeoff">Take off</button>
+            <button id = "takeoff" onclick="confirmwindow()">Take off</button>
             <button id = "landing">Land</button>
             <button id = "missionAbort">Abort Mission</button>
         </div>
